Modified the START button by taking away the button and just using the anchor tag

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="welcome-container">
       <h1>&lt &lt WELCOME TO QUICK QUIZ &gt &gt</h1>
-      <button><a href="#next-section">START</a></button>
+      <a href="#next-section">START</a>
     </div>
     <div class="other-container" id="next-section">
       <div class="quiz-container" id="quiz">
